--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -1,6 +1,6 @@
-<p-table #dt [filterDelay]="0" [sortOrder]="1" [value]="timestamps" sortField="logOfTimestamp"
+<p-table #dt [filterDelay]="0" [lazy]="true" [sortOrder]="1" [value]="($timestamps | async)"
          [globalFilterFields]="['timestampType','classifierCode','eventTypeCode','portOfCall','portPrevious', 'portNext']"
-         styleClass="p-datatable-sm">
+         sortField="logOfTimestamp" styleClass="p-datatable-sm">
   <ng-template pTemplate="caption">
     <div class="p-grid">
       <div class="p-col"></div>
@@ -86,7 +86,6 @@
       <td></td>
       <td></td>
       <td></td>
-
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-timestamp>
@@ -122,7 +121,6 @@
         </p-button>
       </td>
       <td style="width: 5%">
-
         <p-button *ngIf="highestTimestampId == timestamp.id" icon="pi pi-trash"
                   (click)="deleteTimestamp(timestamp)" pTooltip="Delete the timestamp" tooltipPosition="top"
                   tooltipStyleClass="ToolTipClass"></p-button>
