P6-37 DCSA-6 reformat data timestamp value from table with linebreak after date, add another column named vessel to the table

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -4,6 +4,9 @@
       <td style="width: 7%; padding-left: 0">
         <p-dropdown [(ngModel)]="timestamp.timestampType" [options]="timestampTypes"></p-dropdown>
       </td>
+      <td style="width: 7%; padding-left: 0">
+        <p-dropdown [(ngModel)]="timestamp.timestampType" [options]="timestampTypes"></p-dropdown>
+      </td>
       <td style="width: 5%"></td>
       <td>
         <p-calendar [(ngModel)]="timestamp.logOfTimestamp" hourFormat="24" monthNavigator="true" showButtonBar="true"
