P6-37 DCSA-6 always make port of call and vessel selectable and set the filtered value as preselected value

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -2,7 +2,7 @@
   <ng-template pTemplate="body" let-timestamp>
     <tr>
       <td style="width: 7%; padding-left: 0">
-        <p-dropdown [(ngModel)]="timestamp.timestampType" [options]="timestampTypes"></p-dropdown>
+        <p-dropdown [(ngModel)]="timestamp.vessel" [options]="vesselOptions"></p-dropdown>
       </td>
       <td style="width: 7%; padding-left: 0">
         <p-dropdown [(ngModel)]="timestamp.timestampType" [options]="timestampTypes"></p-dropdown>
