--- a/ui/src/app/view/header/header.component.html
+++ b/ui/src/app/view/header/header.component.html
@@ -13,7 +13,8 @@
   </div>
   <div class="p-col-1"></div>
   <div class="p-col-4 header__menuLabel">
-    <span i18n="@@menu_entry_mandator">Company: {{ companyName }}</span>
+    <span i18n="@@menu_entry_mandator">Company: {{ companyName }}</span><br>
+    <span class="header__info_small">{{companyCodeType}}: {{companyId}}</span>
   </div>
 </div>
 
