--- a/ui/src/app/view/vessel/vessel.component.html
+++ b/ui/src/app/view/vessel/vessel.component.html
@@ -4,7 +4,7 @@
       <span i18n="@@vessel">Vessel</span>
     </p-header>
     <div class="p-grid">
-      <div class="p-col-1">
+      <div class="p-col-2">
         <p-button (onClick)="createNewVessel()" class="p-button-raised p-button-rounded vessel__addVesselBtn"
                   icon="pi pi-plus" pTooltip="Add a new vessel" tooltipPosition="top" type="button"
                   tooltipStyleClass="ToolTipClass"></p-button>
@@ -12,19 +12,23 @@
                   icon="pi pi-pencil" pTooltip="Edit a vessel" tooltipPosition="top" type="button"
                   tooltipStyleClass="ToolTipClass"></p-button>
       </div>
-      <div class="p-col-2">
+      <div class="p-col-5">
         <p-dropdown (onChange)="selectVessel()" [(ngModel)]="selectedVessel" [filter]="true" [options]="vessels"
                     autofocus="true"></p-dropdown>
       </div>
-      <div class="p-col-1 vessel__vesselDetails"><span i18n="@@vessel__imo_number">IMO number:</span></div>
-      <div class="p-col-1 vessel__vesselDetails"><span *ngIf="selectedVessel">{{ selectedVessel.imo }}</span></div>
-      <div class="p-col-1 vessel__vesselDetails"><span i18n="@@vessel__teu">Vessel size (TEU):</span></div>
-      <div class="p-col-1 vessel__vesselDetails"><span *ngIf="selectedVessel">{{ selectedVessel.teu | number }}</span>
+      <div class="p-col-5">
+        <div class="vessel__vesselDetails">
+          <span i18n="@@vessel__imo_number">IMO number: </span>
+          <span *ngIf="selectedVessel">{{ selectedVessel.imo }}</span></div>
+        <div class="vessel__vesselDetails">
+          <span i18n="@@vessel__teu">Vessel size (TEU): </span>
+          <span *ngIf="selectedVessel">{{ selectedVessel.teu | number }}</span></div>
+        <div class="vessel__vesselDetails">
+          <span i18n="@@vessel__service_name">Service name: </span>
+          <span *ngIf="selectedVessel">{{ selectedVessel.serviceNameCode }}</span></div>
       </div>
-      <div class="p-col-1 vessel__vesselDetails"><span i18n="@@vessel__service_name">Service name:</span></div>
-      <div class="p-col-3 vessel__vesselDetails"><span
-        *ngIf="selectedVessel">{{ selectedVessel.serviceNameCode }}</span></div>
     </div>
+
   </p-card>
 </div>
 <p-toast key="vesselUpdateSuccess" position="bottom-right"></p-toast>
