--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -19,6 +19,9 @@ $steelGrey: #E4E4E6;
 
 $darkGrey: #7c7c7c;
 
+
+$tableSize: 8pt;
+
 body {
   background-color: $steelGrey;
   font-family: Poppins,sans-serif;
