--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.scss
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.scss
@@ -3,23 +3,33 @@
 .rowDetails {
   color: $darkGrey;
   text-transform: capitalize;
-  font-size: 12px;
+  font-size: $tableSize !important;
 }
 
 .terminalListDetails {
   color: $darkGrey;
   text-transform: capitalize;
-  font-size: 12px;
 }
 
 .ui-dropdown-label-container {
   width: 100%;
+
 }
-.ui-dropdown.ui-dropdown-clearable .ui-dropdown-label {
+.ui-dropdown .ui-dropdown-clearable .ui-dropdown-label {
   text-overflow: ellipsis;
   padding-right: 2em !important;
 }
 .p-dropdown .p-dropdown-label {
   text-overflow: ellipsis;
   padding-right: 1em !important;
+
+
 }
+.p-dropdown-label{
+  font-size: $tableSize !important;
+}
+.timestampContent{
+
+}
+
+
