--- a/ui/src/app/view/app.component.html
+++ b/ui/src/app/view/app.component.html
@@ -2,17 +2,9 @@
   <div class="main__spaceBetween">
     <app-header></app-header>
   </div>
-  <div class="p-grid">
-    <div class="p-col-6">
-      <div class="main__spaceBetween main__spaceInnerComponent">
-        <app-port-of-call (portOfCallNotifier)="portOfCallChangedHandler($event)"></app-port-of-call>
-      </div>
-    </div>
-    <div class="p-col-6">
-      <div class="main__spaceBetween main__spaceInnerComponent">
-        <app-vessel (vesselNotifier)="vesselChangedHandler($event)"></app-vessel>
-      </div>
-    </div>
+  <div class="main__cards">
+      <app-port-of-call class="rightSpace fullWidthAndHeight" (portOfCallNotifier)="portOfCallChangedHandler($event)"></app-port-of-call>
+      <app-vessel class="fullWidthAndHeight" (vesselNotifier)="vesselChangedHandler($event)"></app-vessel>
   </div>
 
 
