--- a/ui/src/app/view/vessel/vessel.component.html
+++ b/ui/src/app/view/vessel/vessel.component.html
@@ -1,34 +1,39 @@
 <div class="vessel">
   <p-card>
-    <p-header class="vessel__header">
-      <span i18n="@@vessel">Vessel</span>
-    </p-header>
-    <div class="p-grid">
-      <div class="p-col-2">
-        <p-button (onClick)="createNewVessel()" class="p-button-raised p-button-rounded vessel__addVesselBtn"
-                  icon="pi pi-plus" pTooltip="Add a new vessel" tooltipPosition="top" type="button"
-                  tooltipStyleClass="ToolTipClass"></p-button>
-        <p-button (onClick)="editVessel()" [disabled]="!selectedVessel" class="p-button-raised p-button-rounded"
-                  icon="pi pi-pencil" pTooltip="Edit a vessel" tooltipPosition="top" type="button"
-                  tooltipStyleClass="ToolTipClass"></p-button>
+    <div class="vessel__content">
+      <span class="vessel__header" i18n="@@vessel">Vessel</span>
+
+      <div class="vessel__select_modify">
+        <div class="p-col-5">
+          <p-dropdown (onChange)="selectVessel()" [(ngModel)]="selectedVessel" [filter]="true" [options]="vessels"
+                      autofocus="true"></p-dropdown>
+        </div>
+
+        <div class="vessel__select_modify__buttons">
+          <p-button (onClick)="createNewVessel()" class="p-button-raised p-button-rounded vessel__select_modify__buttons__addVesselBtn"
+                    icon="pi pi-plus" pTooltip="Add a new vessel" tooltipPosition="top" type="button"
+                    tooltipStyleClass="ToolTipClass"></p-button>
+          <p-button (onClick)="editVessel()" [disabled]="!selectedVessel" class="p-button-raised p-button-rounded"
+                    icon="pi pi-pencil" pTooltip="Edit a vessel" tooltipPosition="top" type="button"
+                    tooltipStyleClass="ToolTipClass"></p-button>
+        </div>
       </div>
-      <div class="p-col-5">
-        <p-dropdown (onChange)="selectVessel()" [(ngModel)]="selectedVessel" [filter]="true" [options]="vessels"
-                    autofocus="true"></p-dropdown>
-      </div>
-      <div class="p-col-5">
-        <div class="vessel__vesselDetails">
+
+      <div class="vessel__vesselDetails">
+        <div class="vessel__vesselDetails__element">
           <span i18n="@@vessel__imo_number">IMO number: </span>
-          <span *ngIf="selectedVessel">{{ selectedVessel.imo }}</span></div>
-        <div class="vessel__vesselDetails">
+          <span *ngIf="selectedVessel">{{ selectedVessel.imo }}</span>
+        </div>
+        <div class="vessel__vesselDetails__element">
           <span i18n="@@vessel__teu">Vessel size (TEU): </span>
-          <span *ngIf="selectedVessel">{{ selectedVessel.teu | number }}</span></div>
-        <div class="vessel__vesselDetails">
+          <span *ngIf="selectedVessel">{{ selectedVessel.teu | number }}</span>
+        </div>
+        <div class="vessel__vesselDetails__element">
           <span i18n="@@vessel__service_name">Service name: </span>
-          <span *ngIf="selectedVessel">{{ selectedVessel.serviceNameCode }}</span></div>
+          <span *ngIf="selectedVessel">{{ selectedVessel.serviceNameCode }}</span>
+        </div>
       </div>
     </div>
-
   </p-card>
 </div>
 <p-toast key="vesselUpdateSuccess" position="bottom-right"></p-toast>
