--- a/ui/src/app/view/vessel-editor/vessel-editor.component.scss
+++ b/ui/src/app/view/vessel-editor/vessel-editor.component.scss
@@ -1,3 +1,7 @@
 .ng-invalid.ng-dirty:not(form), .ng-invalid:not(form).form-submitted {
   border: solid 2px lightcoral;
 }
+
+.p-buttonset {
+  width: 40%;
+}
